# privrag

./: README.md  pyproject.toml
src/privrag/: cli.py  config.py  debug_lmstudio.py
src/privrag/embed/: __init__.py  base.py  factory.py  local.py  openai_embed.py
src/privrag/ingest/: __init__.py  chunking.py  loaders.py  ocr.py  run.py
src/privrag/llm/: __init__.py  base.py  factory.py  lm_studio.py  none_llm.py  ollama.py  openai_chat.py  openrouter_chat.py  tokens.py
src/privrag/rag/: __init__.py  pipeline.py
src/privrag/store/: __init__.py  qdrant_store.py
src/privrag/web/: __init__.py  __main__.py  app.py
src/privrag/web/static/: index.html
tests/: __init__.py
tests/fixtures/: sample.md  sample.txt
tests/integration/: test_web_api.py
tests/unit/: __init__.py  test_chunking.py  test_config.py  test_loaders.py  test_ocr.py  test_rag_pipeline.py
